# buglab

./: .gitignore  CMakeLists.txt  map.txt  map_bug.txt  map_bug_large.txt  map_bug_small.txt  readme.md
docs/: 32vs64_time.txt
python/: bruteforce.py  cfunc.cpp  genetic.py  genetics.cpp  heatmap.py  predict_reward.py  predict_reward_infer.py  run.bat  run_cython.pyx  setup.py  test.py
src/: Masks.h  Masks_a.h  Masks_old.h  Masks_x.h  Masks_xx.h  Masks_xxx.h  Maze.h  Population.h  ThreadPool.h  Tournament.h  main.cpp
ui/: BUI.cbproj  BUI.cbproj.local  BUI.cpp  BuglabRoutiness.h  CalcThread.h  Unit1.cpp  Unit1.dfm  Unit1.h
